new stuffs missing phone size
fixed video size and styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Random Chat</title>
 </head>
 <body>
-    <h1 id="display_name">Random Chat</h1>
+    <h1 id="display_name"></h1>
 
     <!-- THE FORM HEREEEE -->
 
