fixed the video size and buttons
video good style good fixing the username

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Random Chat</title>
 </head>
 <body>
-    <h1 id="display_name"></h1>
+ 
+  
 
     <!-- THE FORM HEREEEE -->
-
     <form class="form" action="">
         <input type="text" id="Name" autocomplete="off" placeholder="Enter Your Name" name="text" class="input">
         <div class="button-div">
@@ -24,6 +24,7 @@
         </div>
       </form>
 
+
       <!-- FROM ENDS HERE -->
 
       <!-- CREATING THE VIDEO CHAT ROOM HERE -->
@@ -32,7 +33,7 @@
         <div class="video-streams"></div>
 
         <div class="stream-controls">
-            <button class="leave-btn">Leave Stream</button>
+            <button class="leave-btn">Leave</button>
             <button class="mic-btn">Mic on</button>
             <button class="camera-btn">Camera</button>
         </div>
