--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Random Chat</title>
 </head>
 <body>
- 
+  <div class="name">
+    <h1 id="display_name"></h1>
+  </div>
   
 
     <!-- THE FORM HEREEEE -->
@@ -41,6 +43,21 @@
 
 
 
+      <!-- LOADER -->
+
+      <div class="ui-abstergo">
+        <div class="abstergo-loader">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+        <div class="ui-text">
+          Loading
+          <div class="ui-dot"></div>
+          <div class="ui-dot"></div>
+          <div class="ui-dot"></div>
+        </div>
+      </div>
 
 
 
