--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <!-- LOADER -->
 
-      <div class="ui-abstergo">
+      <div class="ui-abstergo hidden">
         <div class="abstergo-loader">
           <div></div>
           <div></div>
@@ -58,6 +58,7 @@
           <div class="ui-dot"></div>
         </div>
       </div>
+      
 
 
 
