--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
       </div>
     </form>
 
+    <div class="toggle-switch">
+  <label class="switch-label">
+    <input type="checkbox" class="checkbox">
+    <span class="slider"></span>
+  </label>
+</div> 
+
     <!-- FROM ENDS HERE -->
 
     <!-- CREATING THE VIDEO CHAT ROOM HERE -->
